// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should mark the currently active child route as selected tab 1`] = `
Array [
  <ul
    class="tabs"
  >
    <li
      class="tab"
    >
      <button
        title="Tab Titel 1"
      >
        Tab Titel 1
      </button>
    </li>
    <li
      class="tab selected"
    >
      <button
        disabled=""
        title="Tab Titel 2"
      >
        Tab Titel 2
      </button>
    </li>
  </ul>,
  <h1>
    Child
  </h1>,
]
`;

exports[`Should render the child components after the tabs 1`] = `
Array [
  <ul
    class="tabs"
  >
    <li
      class="tab"
    >
      <button
        title="Tab Titel 1"
      >
        Tab Titel 1
      </button>
    </li>
    <li
      class="tab"
    >
      <button
        title="Tab Titel 2"
      >
        Tab Titel 2
      </button>
    </li>
  </ul>,
  <h1>
    Child
  </h1>,
]
`;

exports[`Should render the loader if loading prop is set to true 1`] = `
<div
  class="loader"
>
  <div
    class="spinner"
    style="width:40px;height:40px"
  >
    <div
      class="doubleBounce1"
    />
    <div
      class="doubleBounce2"
    />
  </div>
</div>
`;

exports[`Should render the loader if the resourceStore is still loading 1`] = `
<div
  class="loader"
>
  <div
    class="spinner"
    style="width:40px;height:40px"
  >
    <div
      class="doubleBounce1"
    />
    <div
      class="doubleBounce2"
    />
  </div>
</div>
`;
